--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
@@ -54,11 +54,12 @@
                              </div>
                         </div>
                         <div style="background-color:cadetblue ; height: 220px; width: 570px; margin-left: 15px; border-radius: 30px;  display: flex; flex-wrap: wrap; overflow-y: auto; padding: 5px; ">
-
+                            <% data.forEach((item)=>{%>
                             <div class="gallery">
-                                <img src="images/post1.png" alt="">
+                                <img src="<%=item.image%>" alt="">
                             </div>
-                            <div class="gallery">
+                            <%});%>
+                            <!-- <div class="gallery">
                                 <img src="images/post2.png" alt="">
                             </div>
                             <div class="gallery">
@@ -81,7 +82,7 @@
                             </div>
                             <div class="gallery">
                                 <img src="images/post1.png" alt="">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
              </div>
@@ -91,6 +92,7 @@
                  <!-- ---------------posts------------------------- -->
                 <div class="posts">
                     <!-- -----------------------post1--------------------------- -->
+                    <% data.forEach((item)=>{%>
                     <div class="post">
                         <div class="head">
                              <div class="profile_photo">
@@ -103,7 +105,7 @@
                         </div>
 
                         <div class="photo">
-                             <img src="images/post1.png" alt="" class="post_photo">
+                             <img src="<%=item.image%>" alt="" class="post_photo">
                         </div>
 
                         <div class="action-button">
@@ -121,20 +123,21 @@
                                  <span><img src="images/profile2.png" alt="" class="image"></span>
                                  <span><img src="images/profile3.png" alt="" class="image"></span>
                                  <span><img src="images/profile4.png" alt="" class="image"></span>&nbsp; &nbsp;
-                                 <p>Liked by <b>Name1</b> and <b>123 others</b></p>
+                                 <p>Likes : <b><%=item.likes%></b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Name</b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p><b><%=item.uploaderID%> : </b><%=item.caption%></p>
                         </div> 
 
                         <div class="comments text-muted">
                                    view all 23 comments
                         </div>
                     </div> 
+                    <%});%>
 
-                    <!-- ---------------------------post2----------------------------- -->
-                    <div class="post">
+                    <!---- ---------------------------post2----------------------------->
+                    <!-- <div class="post">
                         <div class="head">
                              <div class="profile_photo">
                                  <img src="images/man.png" alt="" class="images">
@@ -174,10 +177,10 @@
                         <div class="comments text-muted">
                                    view all 23 comments
                         </div>
-                    </div> 
+                    </div>  -->
 
                     <!-- -------------------------------------------post3------------------------------- -->
-                    <div class="post">
+                    <!-- <div class="post">
                         <div class="head">
                              <div class="profile_photo">
                                  <img src="images/man.png" alt="" class="images">
@@ -217,9 +220,9 @@
                         <div class="comments text-muted">
                                    view all 23 comments
                         </div>
-                    </div> 
+                    </div>  -->
 <!-- --------------------------------------------------------------post4--------------------------- -->
-                    <div class="post">
+                    <!-- <div class="post">
                         <div class="head">
                              <div class="profile_photo">
                                  <img src="images/man.png" alt="" class="images">
@@ -259,7 +262,7 @@
                         <div class="comments text-muted">
                                    view all 23 comments
                         </div>
-                    </div> 
+                    </div>  -->
                 </div>
             </div>
         </div>    
