--- a/views/welcome.html
+++ b/views/welcome.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div id="button">
-                <a href="">Home</a>
+                <a href="/home">Home</a>
         </div>
 </body>
 </html>
